; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_stream.c_uv_listen.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_stream.c_uv_listen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@UV_EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_listen(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %23 [
    i32 128, label %11
    i32 129, label %17
  ]

11:                                               ; preds = %3
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %13 = bitcast %struct.TYPE_4__* %12 to i32*
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @uv_tcp_listen(i32* %13, i32 %14, i32 %15)
  store i32 %16, i32* %7, align 4
  br label %25

17:                                               ; preds = %3
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %19 = bitcast %struct.TYPE_4__* %18 to i32*
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @uv_pipe_listen(i32* %19, i32 %20, i32 %21)
  store i32 %22, i32* %7, align 4
  br label %25

23:                                               ; preds = %3
  %24 = load i32, i32* @UV_EINVAL, align 4
  store i32 %24, i32* %7, align 4
  br label %25

25:                                               ; preds = %23, %17, %11
  %26 = load i32, i32* %7, align 4
  %27 = icmp eq i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %25
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %30 = call i32 @uv__handle_start(%struct.TYPE_4__* %29)
  br label %31

31:                                               ; preds = %28, %25
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local i32 @uv_tcp_listen(i32*, i32, i32) #1

declare dso_local i32 @uv_pipe_listen(i32*, i32, i32) #1

declare dso_local i32 @uv__handle_start(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
